[project]
name = "rala"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.3",
    "jax>=0.9.0.1",
    "optax>=0.2.7",
    "tqdm>=4.67.3",
]


[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
