[project]
name = "rala"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffrax>=0.7.1",
    "flax>=0.12.3",
    "jax>=0.9.0.1",
    "matplotlib>=3.10.8",
    "optax>=0.2.7",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "typer>=0.21.1",
]


[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
